implement new village state

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>JS Refresh</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="project.js"></script>
 </body>
 </html>
